--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^3.3.7",
     "ejs": "^2.5.5",
     "express": "^4.14.0",
+    "express-paginate": "^0.2.2",
     "mime": "^1.3.4",
     "mongoose": "^4.7.6",
     "multer": "^1.2.1"
